--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.3"
 services: # Uses the dockerfile in backEnd
-  backend_isw:
+  backend:
     build: ./backEnd
     tty: true
     container_name: backend_testing
@@ -29,8 +29,5 @@ services: # Uses the dockerfile in backEnd
       - 8080:8080
       - 50000:50000
     container_name: jenkins
-    volumes:
-     - /home/${myname}/jenkins_compose/jenkins_configuration:/var/jenkins_home
-     - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
      - backend
